OO-5489: remove support for QTI 1.2